made some updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,17 @@
 {
   "cSpell.words": [
+    "amet",
     "Bagwell",
+    "Bellick",
     "brooooooooom",
+    "bulaba",
     "Kellerman",
+    "Kombat",
     "movielist",
     "Scofield",
-    "swiper"
+    "swiper",
+    "Tancredi",
+    "Webflix",
+    "Witcher"
   ]
 }
